<resources>
    <string name="app_name">Savics Medic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Savics</string>
    <string name="nav_header_subtitle">support@savics.org</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_reset">Reset</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="full_name">Full Name</string>
    <string name="add_new_record">Add a new patient</string>
    <string name="settings">Settings</string>
    <string name="current_username">Current Username</string>
    <string name="current_number_of_added_patients">Current Number of Added Patients</string>
    <string name="max_no_of_patients">Maximum No of Patients</string>
    <string name="save">SAVE</string>
</resources>
