<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity"
    android:padding="@dimen/margin_settings"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margintop"
        android:text="@string/settings"
        android:textColor="@color/colorAccent"
        android:textSize="18dp" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_username"

        />


    <EditText
        android:id="@+id/patients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_number_of_added_patients"
        android:inputType="number"

        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:hint="@string/max_no_of_patients"
        android:text="5"
        android:clickable="false"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/save"
        android:layout_gravity="center"/>


</LinearLayout>